# league-api-v2

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/postgres/init/: 001-create-app-role.sql
docs/: architecture.md  development.md  setup.md
migrations/: env.py
migrations/versions/: 20260707_0001_cache_jobs.py  20260707_0002_job_query_indexes.py  20260713_0003_durable_matches.py  20260713_0004_ranked_ladder_players.py  20260713_0005_player_identities.py  20260713_0006_match_references.py  20260717_0007_active_profile_jobs.py
scripts/: db-migrate.sh  db-reset.sh  run-compose.sh  run-local.sh  test-endpoints.sh  test-job-endpoints.sh  test-riot-endpoints.sh
scripts/lib/: live-endpoints.sh
src/league_api/: __init__.py  db.py  main.py
src/league_api/api/: query.py
src/league_api/core/: auth.py  config.py  logging.py
src/league_api/db/: session.py
src/league_api/experimental_frontend/: __init__.py
src/league_api/ingestion/: ladder_page.py
src/league_api/jobs/: __init__.py  ingestion.py  ladder_players.py  models.py  postgres_store.py  profile.py  queue.py  store.py
tests/: conftest.py  test_auth.py  test_experimental_frontend.py  test_health.py  test_ingestion_route.py  test_jobs_queue.py  test_jobs_routes.py  test_jobs_store.py  test_ladder_ingestion_job.py  test_ladder_page_ingestion.py  test_ladder_players.py  test_ladders_routes.py  test_manager_routes.py  test_match_store.py  test_player_identity_store.py  test_profile_fetch_job.py  test_profiles_routes.py  test_riot_cache.py  test_riot_client.py  test_riot_rate_limiter.py  test_riot_routes.py
(+30 files in other folders)
